[services] fine tuning & docker testing
