# doc/swagger/AoL-Teacher.yaml
@@ -11,7 +11,7 @@ info:
 
   contact:
     email: sudhagar@abovecloud9.ai
-  version: 0.0.8
+  version: 0.0.9
 externalDocs:
   description: Find out more about AboveCloud9.AI
   url: https://abovecloud9.ai
@@ -154,9 +154,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/GLADConfig'
+                $ref: '#/components/schemas/GLADConfig'
 
   /courses:
     put:
